etc/servers/firewall.conf
# ***************************************************************************
# The original version was generated by iptables-save from 's1'
# The following ports have been opened:
#    21     ftp: File Transfer Protocol
#    80     http: Apache web server
#    443    https: Apache web server (secure)
#    5432   postgres: PostgresQL database
#    7172   Breato Gateway
#    15428  ssh: SSH Remote Login Protocol (default 22)
# ***************************************************************************
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [1526567:679446048]
:Airwave-Firewall-v1 - [0:0]
-A INPUT -j Airwave-Firewall-v1 
-A FORWARD -j Airwave-Firewall-v1 
-A Airwave-Firewall-v1 -i lo -j ACCEPT 
-A Airwave-Firewall-v1 -p esp -j ACCEPT 
-A Airwave-Firewall-v1 -p ah -j ACCEPT 
-A Airwave-Firewall-v1 -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A Airwave-Firewall-v1 -p tcp -m tcp --dport 21 -m state --state NEW -j ACCEPT 
-A Airwave-Firewall-v1 -p tcp -m tcp --dport 80 -m state --state NEW -j ACCEPT 
-A Airwave-Firewall-v1 -p tcp -m tcp --dport 443 -m state --state NEW -j ACCEPT 
-A Airwave-Firewall-v1 -p tcp -m tcp --dport 5432 -m state --state NEW -j ACCEPT 
-A Airwave-Firewall-v1 -p tcp -m tcp --dport 7172 -m state --state NEW -j ACCEPT 
-A Airwave-Firewall-v1 -p tcp -m tcp --dport 15428 -m state --state NEW -j ACCEPT 
# Allow ping requests
-A Airwave-Firewall-v1 -p icmp --icmp-type 0 -j ACCEPT 
-A Airwave-Firewall-v1 -p icmp --icmp-type 8 -j ACCEPT 
# Disallow timestamp requests
-A Airwave-Firewall-v1 -p icmp --icmp-type 13 -j DROP 
-A Airwave-Firewall-v1 -p icmp --icmp-type 14 -j DROP 
-A Airwave-Firewall-v1 -j REJECT --reject-with icmp-port-unreachable 
COMMIT
